<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/ChocolateSyrup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chocolate_syrup" />

    <CheckBox
        android:id="@+id/Sprinkles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sprinkles" />

    <CheckBox
        android:id="@+id/CrushedNuts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crushed_nuts" />

    <CheckBox
        android:id="@+id/Cherries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cherries" />

    <CheckBox
        android:id="@+id/OrioCookieCrumbles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orio_cookie_crumbles" />

    <Button
        android:id="@+id/button_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_toast"
        android:onClick="showToast"/>
</LinearLayout>